--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "glob": "^7.1.1",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1",
     "rimraf": "^2.6.1"
   }
 }
